# TextDedup

./: .gitignore  CHANGELOG.md  HANDOFF.md  README.md  plan-textDedup.prompt.md  pyproject.toml  requirements.txt
configs/: query.txt  query_default.toml  query_fast.toml  query_recall.toml  query_sbert_only.toml
docs/: cpp_interface_contract.md  tech_design.md
scripts/: build_title_user_dict.py  clean_raw2.py  export_shard_artifact_report.py  query_similar_segments.py  split_raw2.py
src/textdedup/: __init__.py  cache.py  chunking.py  config.py  cpp_bridge.py  data_loader.py  lexicon.py  preprocess.py  sbert_similarity.py  simhash.py  similarity.py  stopwords.py  two_stage.py
tests/: test_chunking.py  test_cpp_bridge.py  test_data_loader.py  test_export_shard_artifact_report.py  test_sbert_similarity.py  test_simhash.py  test_similarity.py  test_two_stage.py
text-catcher/: README.md  config.yaml  requirements.txt
text-catcher/data/raw/: collect_state.json  raw_docs.jsonl
text-catcher/docs/: site-crawl-spec.md
text-catcher/scripts/: collect.sh
text-catcher/src/text_catcher/: collector.py
