[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textdedup"
version = "0.1.0"
description = "Two-stage text deduplication prototype with fingerprint filtering"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "TextDedup Team" }
]
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
